Actualización en Parte_I_SQL Game.ipynb

--- a/Parte_I_SQL Game.ipynb
+++ b/Parte_I_SQL Game.ipynb
@@ -59,6 +59,240 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "En base a eso tenemos que el crimen ocurrio el 15/01/2018 y en la ciudad: SQL City.\n",
+    "\n",
+    "Buscamos el reporte en la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM crime_scene_report\n",
+    "WHERE date = '20180115'\n",
+    "AND city = 'SQL City'\n",
+    "AND type = 'murder'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Date       | Type   | Description                                                                                                  | City     |\n",
+    "|------------|--------|--------------------------------------------------------------------------------------------------------------|----------|\n",
+    "| 20180115   | Murder | Security footage shows that there were 2 witnesses. The first witness lives at the last house on \"Northwestern Dr\". The second witness, named Annabel, lives somewhere on \"Franklin Ave\". | SQL City |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos el reporte de la policia y sabemos que hay 2 testigo y tenemos que el primero vive en Northwestern Dr que vive al ultimo de las casas por lo cual toca tomar la ultima casa y la segunda testigo se llama Annabel y viveo en Franklin Ave.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT id, name, address_street_name, MAX(address_number) address_number\n",
+    "FROM person\n",
+    "WHERE address_street_name = 'Northwestern Dr'\n",
+    "UNION\n",
+    "SELECT id, name, address_street_name, address_number\n",
+    "FROM person\n",
+    "WHERE address_street_name = 'Franklin Ave'\n",
+    "AND name LIKE '%Annabel%'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| ID     | Name            | Address Street Name | Address Number |\n",
+    "|--------|-----------------|---------------------|----------------|\n",
+    "| 14887  | Morty Schapiro  | Northwestern Dr     | 4919           |\n",
+    "| 16371  | Annabel Miller  | Franklin Ave        | 103            |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sacados los dos testigos y copiamos los Id. Es lo que ocuparemos para saber cual es el testimonio en la tabla interview y ver que observaron del caso."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM interview\n",
+    "WHERE person_id IN (14887, 16371)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Person ID | Transcript                                                                                                                                                      |\n",
+    "|-----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| 14887     | I heard a gunshot and then saw a man run out. He had a \"Get Fit Now Gym\" bag. The membership number on the bag started with \"48Z\". Only gold members have those bags. The man got into a car with a plate that included \"H42W\". |\n",
+    "| 16371     | I saw the murder happen, and I recognized the killer from my gym when I was working out last week on January the 9th.                                           |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Escuchó un disparo y vio a un hombre salir corriendo con una bolsa del gimnasio \"Get Fit Now Gym\". La membresía de la bolsa comenzaba con \"48Z\" (exclusiva de miembros oro). El hombre huyó en un auto con una placa que contenía \"H42W\".\n",
+    "- La membresía comienza con \"48Z\".\n",
+    "- La placa del auto incluye \"H42W\".\n",
+    "2) Vio el asesinato y reconoció al asesino como alguien que vio en su gimnasio mientras hacía ejercicio el 9 de enero de 2018.\n",
+    "- El asesino es miembro del gimnasio \"Get Fit Now Gym\".\n",
+    "- Estuvo en el gimnasio el 9 de enero de 2018."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM get_fit_now_member G\n",
+    "INNER JOIN get_fit_now_check_in C ON G.id = C.membership_id\n",
+    "INNER JOIN person P ON P.id = G.person_id\n",
+    "INNER JOIN drivers_license L ON L.id = P.license_id\n",
+    "WHERE C.check_in_date = '20180109'\n",
+    "AND G.membership_status = 'gold'\n",
+    "AND G.id LIKE '48Z%'\n",
+    "AND L.gender = 'male'\n",
+    "AND L.plate_number LIKE '%H42W%'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| ID    | Person ID | Name           | Membership Start Date | Membership Status | Membership ID | Check-in Date | Check-in Time | Check-out Time | ID    | Name           | License ID | Address Number | Address Street Name     | SSN       | ID    | Age | Height | Eye Color | Hair Color | Gender | Plate Number | Car Make   | Car Model   |\n",
+    "|-------|-----------|----------------|------------------------|-------------------|---------------|---------------|---------------|----------------|-------|----------------|------------|----------------|-------------------------|-----------|-------|-----|--------|-----------|------------|--------|--------------|------------|-------------|\n",
+    "| 48Z55 | 67318     | Jeremy Bowers  | 2016-01-01            | Gold              | 48Z55         | 2018-01-09    | 15:30         | 17:00          | 67318 | Jeremy Bowers  | 423327     | 530            | Washington Pl, Apt 3A   | 871539279 | 423327| 30  | 70     | Brown     | Brown      | Male   | 0H42W2       | Chevrolet  | Spark LS    |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encontramos a la persona con los datos del gym y sabemos que se llama Jeremy Bowers con ID 67318, el cual vamos a ver si es el asesino."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INSERT INTO solution VALUES (1, 'Jeremy Bowers');\n",
+    "SELECT value FROM solution;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Value                                                                                                                                                                         |\n",
+    "|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| Congrats, you found the murderer! But wait, there's more... If you think you're up for a challenge, try querying the interview transcript of the murderer to find the real villain behind this crime. If you feel especially confident in your SQL skills, try to complete this final step with no more than 2 queries. Use this same INSERT statement with your new suspect to check your answer. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nos indica que es el culpable pero falta algo mas, vamos a ver la celda y nos indica que fue contratado por otra persona."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM interview\n",
+    "WHERE person_id = 67318     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Person ID | Transcript                                                                                                                                                                                                 |\n",
+    "|-----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| 67318     | I was hired by a woman with a lot of money. I don't know her name but I know she's around 5'5\" (65\") or 5'7\" (67\"). She has red hair and she drives a Tesla Model S. I know that she attended the SQL Symphony Concert 3 times in December 2017. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El asesino fue contratado por una mujer adinerada, de estatura entre 5'5\" (65\") y 5'7\" (67\"), con cabello rojo y que conduce un Tesla Model S. Además, asistió al SQL Symphony Concert en tres ocasiones en diciembre de 2017.\n",
+    "\n",
+    "Buscar en la tabla de personas (person) a alguien con estas características (cabello rojo, estatura específica, Tesla Model S).\n",
+    "Verificar asistencia al SQL Symphony Concert en la tabla de eventos (facebook_event_checkin) en diciembre de 2017."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT P.id, P.name, I.annual_income, F.event_name, F.date, L.*\n",
+    "FROM person P\n",
+    "INNER JOIN drivers_license L ON L.id = P.license_id\n",
+    "INNER JOIN income I ON I.ssn = P.ssn\n",
+    "INNER JOIN facebook_event_checkin F ON F.person_id = P.id\n",
+    "WHERE L.gender = 'female'\n",
+    "AND L.car_make = 'Tesla'\n",
+    "AND L.car_model = 'Model S'\n",
+    "AND L.height >= 65\n",
+    "AND L.height <= 67\n",
+    "AND L.hair_color = 'red'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| ID     | Name             | Annual Income | Event Name            | Date       | ID     | Age | Height | Eye Color | Hair Color | Gender | Plate Number | Car Make | Car Model |\n",
+    "|--------|------------------|---------------|-----------------------|------------|--------|-----|--------|-----------|------------|--------|--------------|----------|-----------|\n",
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-06 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n",
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-12 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n",
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-29 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos los datos y en base a eso tenemos el nombre de la mujer que contrato a la paersona para matarlo: \"Miranda Priestly\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INSERT INTO solution VALUES (1, 'Miranda Priestly');\n",
+    "SELECT value FROM solution;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Value                                                                                                                                                     |\n",
+    "|-----------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| Congrats, you found the brains behind the murder! Everyone in SQL City hails you as the greatest SQL detective of all time. Time to break out the champagne! |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -78,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
