--- a/Parte_I_SQL Game.ipynb
+++ b/Parte_I_SQL Game.ipynb
@@ -57,18 +57,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Enunciado\n",
-    "Ha ocurrido un crimen y el detective necesita tu ayuda. El detective te dio el informe de la escena del crimen, pero de alguna manera lo perdiste. Recuerdas vagamente que el crimen fue un **asesinato** que ocurrió en algún momento el **15 de enero de 2018** y que tuvo lugar en **SQL City**. Comienza recuperando el informe de la escena del crimen correspondiente de la base de datos del departamento de policía.\n",
-    "\n",
-    "En base a eso tenemos que el crimen ocurrio el 15/01/2018 y en la ciudad: SQL City.\n",
-    "\n",
-    "Buscamos el reporte en la base de datos."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,6 +67,18 @@
     "\n",
     "conn = sqlite3.Connection(\"./data/sql-murder-mystery.db\")\n",
     "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enunciado\n",
+    "Ha ocurrido un crimen y el detective necesita tu ayuda. El detective te dio el informe de la escena del crimen, pero de alguna manera lo perdiste. Recuerdas vagamente que el crimen fue un **asesinato** que ocurrió en algún momento el **15 de enero de 2018** y que tuvo lugar en **SQL City**. Comienza recuperando el informe de la escena del crimen correspondiente de la base de datos del departamento de policía.\n",
+    "\n",
+    "En base a eso tenemos que el crimen ocurrio el 15/01/2018 y en la ciudad: SQL City.\n",
+    "\n",
+    "Buscamos el reporte en la base de datos."
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| ID     | Name            | Address Street Name | Address Number |\n",
+    "| ID     | Name            | Direccion Nombre de la calle | Direccion número |\n",
     "|--------|-----------------|---------------------|----------------|\n",
     "| 14887  | Morty Schapiro  | Northwestern Dr     | 4919           |\n",
     "| 16371  | Annabel Miller  | Franklin Ave        | 103            |\n"
@@ -467,15 +467,6 @@
     "\n",
     "df = pd.read_sql(query, conn)\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| ID    | Person ID | Name           | Membership Start Date | Membership Status | Membership ID | Check-in Date | Check-in Time | Check-out Time | ID    | Name           | License ID | Address Number | Address Street Name     | SSN       | ID    | Age | Height | Eye Color | Hair Color | Gender | Plate Number | Car Make   | Car Model   |\n",
-    "|-------|-----------|----------------|------------------------|-------------------|---------------|---------------|---------------|----------------|-------|----------------|------------|----------------|-------------------------|-----------|-------|-----|--------|-----------|------------|--------|--------------|------------|-------------|\n",
-    "| 48Z55 | 67318     | Jeremy Bowers  | 2016-01-01            | Gold              | 48Z55         | 2018-01-09    | 15:30         | 17:00          | 67318 | Jeremy Bowers  | 423327     | 530            | Washington Pl, Apt 3A   | 871539279 | 423327| 30  | 70     | Brown     | Brown      | Male   | 0H42W2       | Chevrolet  | Spark LS    |\n"
    ]
   },
   {
@@ -789,9 +780,9 @@
    "source": [
     "| ID     | Name             | Annual Income | Event Name            | Date       | ID     | Age | Height | Eye Color | Hair Color | Gender | Plate Number | Car Make | Car Model |\n",
     "|--------|------------------|---------------|-----------------------|------------|--------|-----|--------|-----------|------------|--------|--------------|----------|-----------|\n",
-    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-06 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n",
-    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-12 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n",
-    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-29 | 202298 | 68  | 66     | Green     | Red        | Female | 500123       | Tesla    | Model S   |\n"
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-06 | 202298 | 68  | 66     | Verde     | Rojo       | Mujer  | 500123       | Tesla    | Model S   |\n",
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-12 | 202298 | 68  | 66     | Verde     | Rojo       | Mujer  | 500123       | Tesla    | Model S   |\n",
+    "| 99716  | Miranda Priestly | 310000        | SQL Symphony Concert  | 2017-12-29 | 202298 | 68  | 66     | Verde     | Rojo       | Mujer  | 500123       | Tesla    | Model S   |\n"
    ]
   },
   {
